--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -20,5 +20,12 @@
   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
   version="4.0">
-
+<error-page>
+    <error-code>400</error-code>
+    <location>/WEB-INF/jsp/error400.jsp</location>
+</error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/jsp/error404.jsp</location>
+    </error-page>
 </web-app>
