--- a/resources/words.properties
+++ b/resources/words.properties
@@ -1,3 +1,4 @@
+charm=Charm
 about=About
 active=Active
 age=Age
@@ -19,3 +20,8 @@ password=Password
 save=Save
 status=Status
 surname=Surname
+error.email.invalid=error.email.invalid
+error.email.exist=error.email.exist
+error.password.invalid=error.password.invalid
+error.age.invalid=error.age.invalid
+error.name.invalid=error.name.invalid
